# fit_utils

./: .envrc  .gitignore  Cargo.toml  README.md  build-wasm.sh  index.html  worker.js
fit_utils/: Cargo.toml
fit_utils/src/: devices.rs  streaming_fit_decoder.rs
fit_utils/src/test_data/: 2022-05-15_Ride_i5776435.fit
fit_utils/src/wasm/: mod.rs  wasm_decoder.rs
src/: decoder.rs  devices.rs  fit_decoder.rs  lib.rs  streaming_fit_decoder.rs  wasm_decoder.rs
src/test_data/: 2022-05-07_Ride_i5616171.fit  Edge520-PowerTapG3-2016-12-17-11-03-20.fit
src/wasm/: index.html  wasm_decoder.rs  worker.js
velo/: .envrc  Cargo.toml
velo/src/: lib.rs  schema.sql  schema_base.sql  sqlite.rs  wahoo.rs
velo/src/migrations/: 000-migrations.sql  001-wahoo_webhooks.sql  002-fit_files.sql
velo/test_data/: wahoo_webhook.json
wasm/: index.html
