[package]
edition = "2021"
name = "fit_utils"
version = "0.1.0"

[dependencies]
anyhow = "1.0.56"
chrono = "0.4.19"
clap = { version="3.1.8", features = ["derive"] }
fitparser = "0.4.3"
flate2 = "1.0.23"
geo-types = "0.7.4"
log = "0.4.16"
serde = "1.0.136"
serde_json = "1.0.79"
thiserror = "1.0.30"
wasm-bindgen = { version = "0.2", optional = true, features = ["serde-serialize"] }
wasm-logger = { version = "0.2.0", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = { version = "0.3.57", optional = true }
nom = "7.1.1"


[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen", "dep:wasm-logger", "dep:console_error_panic_hook", "dep:js-sys"]

[dev-dependencies]
test-case = "2.0.2"
