[package]
edition = "2021"
name = "fit_utils"
version = "0.1.0"

[dependencies]
anyhow = "1.0.65"
chrono = "0.4.22"
clap = { version = "4.0.9", features = ["derive"] }
fitparser = "0.5.1"
flate2 = "1.0.24"
geo-types = "0.7.7"
log = "0.4.17"
serde = "1.0.145"
serde_json = "1.0.85"
thiserror = "1.0.37"
wasm-bindgen = { version = "0.2.83", optional = true, features = ["serde-serialize"] }
wasm-logger = { version = "0.2.0", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = { version = "0.3.60", optional = true }
nom = "7.1.1"
env_logger = "0.9.1"


[lib]
crate-type = ["rlib", "cdylib"]

[dev-dependencies]
test-case = "2.2.2"

[features]
default = []
wasm = ["wasm-bindgen", "wasm-logger", "console_error_panic_hook", "js-sys"]
