[package]
name = "velo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
chrono = "0.4.19"
rusqlite = { version = "0.27.0", features = ["serde_json", "chrono"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
log = "0.4.17"
thiserror = "1.0.31"
tiny_http = "0.11.0"
env_logger = "0.9.0"
